docs: Batch G 全ワークフローへのSeed記録義務化 (一括適用)

--- a/.agent/workflows/011.md
+++ b/.agent/workflows/011.md
@@ -118,6 +118,11 @@ git log --grep="refactor" --since="1 month ago" --oneline
 - [ ] 人為的ミス（プロパティ名、Typo 等）の可能性を検証したか？
 - [ ] （必要な場合）得られた知見を Workflow-000 でルール化したか？
 
+
+## 知見の種 (Seed) の記録
+
+運用を通じて得られた「コーディングパターンの改善案」や「ルールの例外事例」は、`seeds.md` (Working Dir) へ記録してください（[Workflow-seed] 準拠）。
+
 ## 知見の継続的改善 (Continuous Knowledge Improvement)
 
 このワークフローを使用する中で、新しい指示や改善点が見つかった場合は、必ずこのファイル (`.agent/workflows/011.md`) を更新・改善することを提案してください。
