--- a/.agent/workflows/012.md
+++ b/.agent/workflows/012.md
@@ -92,3 +92,8 @@ flowchart TB
     style DriverLayer fill:#2d3748,stroke:#90cdf4,stroke-width:2px,color:#fff
     style NativeLayer fill:#2d3748,stroke:#90cdf4,stroke-width:2px,color:#fff
 ```
+
+## 知見の種 (Seed) の記録
+
+運用を通じて得られた「コーディングパターンの改善案」や「ルールの例外事例」は、`seeds.md` (Working Dir) へ記録してください（[Workflow-seed] 準拠）。
+
