--- a/.agent/workflows/016.md
+++ b/.agent/workflows/016.md
@@ -38,3 +38,8 @@ React コンポーネントを新規作成する際の、Atomic Design に基づ
 - [ ] 適切なディレクトリ (`atoms`, `molecules` etc.) に配置したか？
 - [ ] `export interface XxxProps` を定義したか？
 - [ ] スタイルは専用の CSS/CSS Modules、またはプロジェクト標準の方法に従っているか？
+
+## 知見の種 (Seed) の記録
+
+運用を通じて得られた「コーディングパターンの改善案」や「ルールの例外事例」は、`seeds.md` (Working Dir) へ記録してください（[Workflow-seed] 準拠）。
+
