--- a/.agent/workflows/020.md
+++ b/.agent/workflows/020.md
@@ -58,6 +58,11 @@ description: 議論から計画への昇格
 - [ ] `task_boundary` を PLANNING に切り替えたか？
 - [ ] 承認を得るまでコード変更を行わなかったか？
 
+
+## 知見の種 (Seed) の記録
+
+運用を通じて得られた「コーディングパターンの改善案」や「ルールの例外事例」は、`seeds.md` (Working Dir) へ記録してください（[Workflow-seed] 準拠）。
+
 ## 知見の継続的改善
 
 計画書のフォーマットや運用に変更がある場合は、本ドキュメントを更新してください。
