--- a/.agent/workflows/021.md
+++ b/.agent/workflows/021.md
@@ -25,3 +25,8 @@ description: レビュー待機時間の活用
 1.  「レビュー待ち」状態であることを認識する。
 2.  推奨アクティビティの中から、現在価値があるものを選択する。
 3.  何か発見があれば、次回のユーザー応答時に簡潔に報告する（「待っている間に〜を確認しました」）。
+
+## 知見の種 (Seed) の記録
+
+運用を通じて得られた「コーディングパターンの改善案」や「ルールの例外事例」は、`seeds.md` (Working Dir) へ記録してください（[Workflow-seed] 準拠）。
+
