--- a/.agent/workflows/022.md
+++ b/.agent/workflows/022.md
@@ -29,6 +29,37 @@ description: 完了定義とクローズ処理
 
 ### 2. タスク管理更新
 
+---
+
+## description: 完了定義とクローズ処理
+
+# [Workflow-022] 完了定義とクローズ処理 (Definition of Done)
+
+## 概要
+
+一つのタスク（Task Boundary で定義された単位）を完了とする前に確認すべき項目と、クローズ処理の手順です。
+
+## チェックリスト (Definition of Done)
+
+- [ ] **コード品質**:
+  - `npm run typecheck` Passed?
+  - `npm run lint` Passed?
+  - `npm run build` Passed?
+- [ ] **機能要件**:
+  - ユーザーの要求（実装計画の Goal）を満たしているか？
+- [ ] **ドキュメント**:
+  - 変更箇所に関連するドキュメント（アーキテクチャ図、API 仕様）は更新されたか？
+- **コミット**:
+  - 適切なコミットメッセージでコミットされているか？ (`Workflow-003`)
+
+## クローズ手順
+
+### 1. 最終確認
+
+- 上記チェックリストを確認します。未達項目があれば修正します。
+
+### 2. タスク管理更新
+
 - `task.md` の該当項目を `[x]` に更新します。
 - `log.md` に完了報告と成果の概要を追記します。
 
@@ -37,3 +68,12 @@ description: 完了定義とクローズ処理
 - `notify_user` で完了を報告します。
   - 成果物のパス（PathsToReview）
   - 次のアクションの提案
+
+### 4. クリーンアップとステータス確認 (Cleanup)
+
+- `git status` を実行し、意図しないファイル（一時スクリプト、ゴミファイル）が残っていないか確認・削除します。
+- 今回のタスクに関係のない変更が含まれていないか確認します。
+
+## 知見の種 (Seed) の記録
+
+運用を通じて得られた「コーディングパターンの改善案」や「ルールの例外事例」は、`seeds.md` (Working Dir) へ記録してください（[Workflow-seed] 準拠）。
