--- a/.agent/workflows/024.md
+++ b/.agent/workflows/024.md
@@ -52,6 +52,11 @@ description: 意図の補完と具体化 (Complete the Thought)
 - [ ] 派生させた「10 の手順」を固定フォーマットで提示したか？
 - [ ] **提示した後の最初のステップ** について、明示的に承認を得たか？
 
+
+## 知見の種 (Seed) の記録
+
+運用を通じて得られた「コーディングパターンの改善案」や「ルールの例外事例」は、`seeds.md` (Working Dir) へ記録してください（[Workflow-seed] 準拠）。
+
 ## 知見の継続的改善
 
 補完の精度や、提示フォーマットの改善点があれば、本ドキュメントを更新してください。
