--- a/.agent/workflows/027.md
+++ b/.agent/workflows/027.md
@@ -59,3 +59,8 @@ objectiveDiscriminantPartialSwitch(
 - [ ] ユニオン型の分岐に `objectiveDiscriminantSwitch` を使用しているか？
 - [ ] ハンドラ関数は純粋関数、または副作用が明確に分離されているか？
 - [ ] `biome-ignore` 等で型エラーを握りつぶしていないか？
+
+## 知見の種 (Seed) の記録
+
+運用を通じて得られた「コーディングパターンの改善案」や「ルールの例外事例」は、`seeds.md` (Working Dir) へ記録してください（[Workflow-seed] 準拠）。
+
