--- a/.agent/workflows/028.md
+++ b/.agent/workflows/028.md
@@ -51,6 +51,11 @@ description: Workflows・ルールの最適化手順
 - [ ] 変更の根拠と意図が `log.md` に記載されているか？
 - [ ] 「AI にとっても使いやすい（迷わない、自動化しやすい）」形になっているか？
 
+
+## 知見の種 (Seed) の記録
+
+運用を通じて得られた「コーディングパターンの改善案」や「ルールの例外事例」は、`seeds.md` (Working Dir) へ記録してください（[Workflow-seed] 準拠）。
+
 ## 知見の継続的改善 (Continuous Knowledge Improvement)
 
 このワークフロー自体も改善の対象です。より効率的な整理手順が見つかった場合は、本ドキュメントを更新してください。
