--- a/.agent/workflows/029.md
+++ b/.agent/workflows/029.md
@@ -107,6 +107,11 @@ description: Table廃止・Grid推奨 (No Tables, Use Grid)
 - [ ] 親コンテナで `grid-cols` を定義し、子要素で `grid-cols-subgrid` を使用しているか？
 - [ ] 行要素に `col-span-full` が適用されているか？
 
+
+## 知見の種 (Seed) の記録
+
+運用を通じて得られた「コーディングパターンの改善案」や「ルールの例外事例」は、`seeds.md` (Working Dir) へ記録してください（[Workflow-seed] 準拠）。
+
 ## 知見の継続的改善
 
 ブラウザ互換性などの問題で Subgrid が適さない特例的なケースが見つかった場合は、代替案と共に本ドキュメントを更新してください。
