--- a/.agent/workflows/033.md
+++ b/.agent/workflows/033.md
@@ -70,3 +70,8 @@ description: 思考シミュレーションによるドキュメント検証
 - [ ] ドキュメントを見ずにユースケースを洗い出したか？
 - [ ] 「できること」だけでなく「やりたいこと」ベースで考えたか？
 - [ ] 判定結果（特に B と C）に対して、具体的なネクストアクション（追記案など）を提示したか？
+
+## 知見の種 (Seed) の記録
+
+運用を通じて得られた「コーディングパターンの改善案」や「ルールの例外事例」は、`seeds.md` (Working Dir) へ記録してください（[Workflow-seed] 準拠）。
+
