--- a/.agent/workflows/034.md
+++ b/.agent/workflows/034.md
@@ -62,3 +62,8 @@
 - [ ] ユーザーが求めた「評価観点」が列として網羅されているか？
 - [ ] 項目数が多すぎる場合、読みやすくグルーピングまたは分割されているか？
 - [ ] [Workflow-029] と混同せず、ドキュメントとして適切なテーブルを使用しているか？
+
+## 知見の種 (Seed) の記録
+
+運用を通じて得られた「コーディングパターンの改善案」や「ルールの例外事例」は、`seeds.md` (Working Dir) へ記録してください（[Workflow-seed] 準拠）。
+
