--- a/.agent/workflows/035.md
+++ b/.agent/workflows/035.md
@@ -51,6 +51,11 @@ Get-ChildItem -Recurse *.ts | ForEach-Object { (Get-Content $_).Replace('Old', '
 4.  **実行**: `node scripts/replace_alias.js` を実行する。
 5.  **クリーンアップ**: 作業完了後、一時スクリプトを削除する。
 
+
+## 知見の種 (Seed) の記録
+
+運用を通じて得られた「コーディングパターンの改善案」や「ルールの例外事例」は、`seeds.md` (Working Dir) へ記録してください（[Workflow-seed] 準拠）。
+
 ## 知見の継続的改善 (Continuous Knowledge Improvement)
 
 このワークフローを自律的に強化し続けるため、改善点があれば本ファイル (`.agent/workflows/035.md`) 自体の更新を提案してください。
