--- a/.agent/workflows/010.md
+++ b/.agent/workflows/010.md
@@ -119,6 +119,11 @@ description: 大規模機能の実装計画策定ガイドライン
 - [ ] **コード断片は適切か？**: 主要な型定義や関数シグネチャが含まれているか？
 - [ ] **将来の拡張に耐えうるか？**: データの正規化や責務の分離は適切に行われているか？
 
+
+## 知見の種 (Seed) の記録
+
+運用を通じて得られた「コーディングパターンの改善案」や「ルールの例外事例」は、`seeds.md` (Working Dir) へ記録してください（[Workflow-seed] 準拠）。
+
 ## 知見の継続的改善 (Continuous Knowledge Improvement)
 
 このワークフローを使用する中で、新しい指示や改善点が見つかった場合は、必ずこのファイル (`.agent/workflows/010.md`) を更新・改善することを提案してください。
