--- a/.agent/workflows/030.md
+++ b/.agent/workflows/030.md
@@ -57,6 +57,11 @@ import { ModalLayout } from "@/components/template/ModalLayout";
 - [ ] 新規作成したラッパーが必要十分な Props を公開しているか？
 - [ ] プロジェクト標準の `ModalLayout` 等を優先して使用したか？
 
+
+## 知見の種 (Seed) の記録
+
+運用を通じて得られた「コーディングパターンの改善案」や「ルールの例外事例」は、`seeds.md` (Working Dir) へ記録してください（[Workflow-seed] 準拠）。
+
 ## 知見の継続的改善 (Continuous Knowledge Improvement)
 
 このワークフローを使用する中で、新しい指示や改善点が見つかった場合は、必ずこのファイル (`.agent/workflows/030.md`) を更新・改善することを提案してください。
