プロンプト改善

--- a/.agent/workflows/018.md
+++ b/.agent/workflows/018.md
@@ -17,8 +17,15 @@ description: Strict Linter/Type Fix
   - `as any` は論外です。
   - `as unknown as T` などのキャストも避け、Type Guard 関数や適切な型定義修正を優先してください。
   - **例外**: `as const` は ReadOnly な型定義やリテラル型の固定に有効なため、積極的に利用してください。
+- **反射的修正 (Reflexive Fix) の禁止**:
+  - エラーに遭遇した際、「とりあえず動くようにする」ための安易な修正（抑制やキャスト）を即座に行ってはいけません。
+  - 必ず一呼吸置き、本ワークフローの手順に従っているか自問してください。
 
 ## 手順 (Step-by-Step)
+
+### 0. マインドセットとルールの再確認 (Protocol Check)
+
+- 自身のメンタルモデルが「エラー即修正」になっていないか確認し、「分析と許可」のプロセスへ切り替えます。
 
 ### 1. 自動修正の適用 (Auto-fix First)
 
@@ -51,6 +58,9 @@ description: Strict Linter/Type Fix
   - エラー内容
   - 抑制が必要な理由（なぜコード修正では解決できないか）
   - 抑制する範囲（1 行のみに限定する等）
+- **チェックポイント**:
+  - 提案する修正案に `biome-ignore` や `as` が含まれている場合、**その実行前にユーザーの承認を得ているか** 確認してください。
+  - 未承認の場合は、コードを変更する前に必ず承認プロセスを挟んでください。
 - 許可が得られるまで適用しません。
 
 ## チェックリスト
