--- a/.agent/workflows/023.md
+++ b/.agent/workflows/023.md
@@ -1,12 +1,12 @@
 ---
-description: .agent/ 配下のファイル（規約・ワークフロー）編集時のドラフト運用
+description: .`.agent/workflow` 配下のファイル（規約・ワークフロー）編集時のドラフト運用
 ---
 
 # [Workflow-023] 規約・ワークフロー編集時のドラフト運用 (Draft Usage for Rules and Workflows)
 
 ## 概要
 
-`.agent/` 配下の規約ファイル（`GEMINI.md`, `RULE.md` 等）および `.agent/workflows/` 配下のワークフローファイルを編集・作成する場合、直接変更を加えるのではなく、まず一時的なディレクトリ（`_drafts/`）にドラフトを作成してレビューを受け、承認後に正式な場所に移動する手順です。
+`.agent/workflows/` 配下のワークフローファイルを編集・作成する場合、直接変更を加えるのではなく、まず一時的なディレクトリ（`_drafts/`）にドラフトを作成してレビューを受け、承認後に正式な場所に移動する手順です。
 これは、プロジェクトの根幹に関わるルールやナレッジの誤編集・消失を防ぎ、変更内容を確実に監査可能にするためです。
 
 ## 手順 (Step-by-Step)
