docs: Workflow-018 に「タスク外エラーへの不干渉」ルールを追加
- 厳格な Linter/Type Fix 手順に Scope Isolation の原則を明記
- 安全管理基準として、無関係なエラーへの介入禁止アクションを追加

--- a/.agent/workflows/018.md
+++ b/.agent/workflows/018.md
@@ -20,6 +20,10 @@ description: Strict Linter/Type Fix
 - **反射的修正 (Reflexive Fix) の禁止**:
   - エラーに遭遇した際、「とりあえず動くようにする」ための安易な修正（抑制やキャスト）を即座に行ってはいけません。
   - 必ず一呼吸置き、本ワークフローの手順に従っているか自問してください。
+- **タスク外エラーへの不干渉 (Scope Isolation)**:
+  - `typecheck` や `lint` 等で、**現在のタスクで変更していないファイル**や**タスクのスコープ外**のエラーが検出された場合、**決して勝手に修正してはいけません**。
+  - これらは「ユーザーが別作業中」や「並行する他タスクの影響」である可能性が高く、介入はコンフリクトの原因となります。
+  - **アクション**: エラーを発見した場合は、手を触れずにユーザーに報告し、指示（無視してよいか、修正すべきか）を仰いでください。
 
 ## 手順 (Step-by-Step)
 
