ワークフロー更新

--- a/.agent/workflows/018.md
+++ b/.agent/workflows/018.md
@@ -37,6 +37,7 @@ description: Strict Linter/Type Fix
 - `ultracite` (Biome wrapper) は、フォーマットや安全な修正を自動で行う機能を持っています。
 - 手順:
   ```bash
+  npm run format
   npm run ultracite:fix
   ```
 - これにより、大量のフォーマットエラーや単純な修正漏れが一括解消され、真に対処すべき論理エラーだけが残ります。また、エラー過多によるツールクラッシュを防ぐ効果もあります。
